--- a/EX11.md
+++ b/EX11.md
@@ -1,5 +1,5 @@
 # EX 11: Oracle Database Connection with Python
-## Date: 
+## Date: 31/10/2023
 ## AIM:
 To connect Oracle database with Python using cx_Oracle module.
 ## PROCEDURE:
